fixed project grid misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,6 +386,14 @@ a.faq {
   font-size: 1.5em;
 }
 
+#projects{
+  grid-auto-rows: 1fr
+}
+
+#projects .card-title{
+  height: auto;
+}
+
 /* ################### */
 
 /* #   Events Pages  # */
